fixed login/logout/auth for user

--- a/partials/log-in.html
+++ b/partials/log-in.html
@@ -10,7 +10,7 @@
 
 <!-- Login/Register Modal -->
 <div id="loginModal" class="container modal-container text-center">
-	<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Login or Register
+	<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">Login or Register
 	</button><br>
 
 	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
