--- a/partials/song-list.html
+++ b/partials/song-list.html
@@ -2,7 +2,7 @@
 <!-- Log out bar -->
 <div class="optionContainer">
 	<div id="optionBar" class="bg-primary">
-		<span  id="logoutBtn"><a href="#/logout">Log Out</a></span>
+		<span id="logoutBtn"><a ng-click="logout()">Log Out</a></span>
 		<span  id="accountBtn"><a href="#">Account</a></span>
 		<span  id="settingsBtn"><a href="#">Settings</a></span>
 	</div>
