added back form to add-music partial

--- a/partials/add-song.html
+++ b/partials/add-song.html
@@ -68,7 +68,7 @@
 <div id="primary-container" class="container song-container songsWrapper">
 	<div class="row">
 		<!-- songPageDiv includes form, label, and inputs for adding music to playlist. -->
-		<div id="addSongPage" class="hide songPageDiv form-horizontal col-md-12">
+		<div id="addSongPage" class="songPageDiv form-horizontal col-md-12">
 
 			<div class="form-group">
   			<label class="col-sm-2 control-label textBoxLabel">Song Title:</label>
