--- a/partials/add-song.html
+++ b/partials/add-song.html
@@ -73,31 +73,31 @@
 			<div class="form-group">
   			<label class="col-sm-2 control-label textBoxLabel">Song Title:</label>
   			<div class="col-sm-10 textBoxDiv">
-  				<input id="newSongBox" type="text" class="form-control textInputBox" placeholder="Enter Song Title">
+  				<input id="newSongBox" type="text" class="form-control textInputBox" placeholder="Enter Song Title" ng-model="name">
   			</div>
   			<label class="col-sm-2 control-label textBoxLabel">Artist Name:</label>
   			<div class="col-sm-10 textBoxDiv">
- 					<input id="newArtistBox" type="text" class="form-control textInputBox" placeholder="Enter Artist Name">
+ 					<input id="newArtistBox" type="text" class="form-control textInputBox" placeholder="Enter Artist Name" ng-model="artist">
  				</div>
   			<label class="col-sm-2 control-label textBoxLabel">Album Title:</label>
  				<div class="col-sm-10 textBoxDiv">
-  				<input id="newAlbumBox" type="text" class="form-control textInputBox" placeholder="Enter Album Title">
+  				<input id="newAlbumBox" type="text" class="form-control textInputBox" placeholder="Enter Album Title" ng-model="album">
   			</div>
   			<div class="col-sm-3"><p class="selectGenreTitle">Select Genre: </p></div>
   			<div class="form-group radio addMusicRadio col-sm-3">
-  				<label class="radio"><input type="radio">  Rock</label>
-  				<label class="radio"><input type="radio">  R&B</label>
-  				<label class="radio"><input type="radio">  Hip-Hop</label>
-  				<label class="radio"><input type="radio">  Classical</label>
+  				<label class="radio"><input id="Rock" type="radio" ng-click="checkGenre()">  Rock</label>
+  				<label class="radio"><input id="RB" type="radio" ng-click="checkGenre()">  R&B</label>
+  				<label class="radio"><input id="HipHop" type="radio" ng-click="checkGenre()">  Hip-Hop</label>
+  				<label class="radio"><input id="Classical" type="radio" ng-click="checkGenre()">  Classical</label>
   			</div>
   			<div class="form-group radio addMusicRadio col-sm-3">
-  				<label class="radio"><input type="radio">  Pop</label>
-  				<label class="radio"><input type="radio">  Country</label>
-  				<label class="radio"><input type="radio">  Dance</label>
-  				<label class="radio"><input type="radio">  Other</label>
+  				<label class="radio"><input id="Pop" type="radio" ng-click="checkGenre()">  Pop</label>
+  				<label class="radio"><input id="Country" type="radio" ng-click="checkGenre()">  Country</label>
+  				<label class="radio"><input id="Dance" type="radio" ng-click="checkGenre()">  Dance</label>
+  				<label class="radio"><input id="Other" type="radio" ng-click="checkGenre()">  Other</label>
       	</div>
   			<div class="col-sm-3 saveSongButtonDiv">
-					<button id="saveNewSongBtn" type="button" class="btn btn-default btn-lg btn-block">Add Music to Playlist</button>
+					<button id="saveNewSongBtn" type="button" class="btn btn-default btn-lg btn-block" ng-click="add()">Add Music to Playlist</button>
   			</div>
       </div>
 
