added oAuth stuff

--- a/partials/log-in.html
+++ b/partials/log-in.html
@@ -37,6 +37,7 @@
 	        </form>
 	      </div>
 	      <div class="modal-footer">
+	      	<button class="btn btn-primary" ng-click="githubOauth()">Sign in with Github</button>
 	        <button id="loginBtn" type="button" class="btn btn-primary" ng-click="login()">Login</button>
 	        <button id="registerBtn" type="button" class="btn btn-primary" ng-click="register()">Register</button>
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
