--- a/partials/add-song.html
+++ b/partials/add-song.html
@@ -46,16 +46,16 @@
 				</select>
 			</div>
 			<div class="col-sm-3 filterRadios">
-				<label class="radio"><input type="radio">  Rock</label>
-  			<label class="radio"><input type="radio">  R&B</label>
-  			<label class="radio"><input type="radio">  Hip-Hop</label>
-  			<label class="radio"><input type="radio">  Classical</label>
+				<label class="radio"><input name="group1" type="radio">  Rock</label>
+  			<label class="radio"><input name="group1" type="radio">  R&B</label>
+  			<label class="radio"><input name="group1" type="radio">  Hip-Hop</label>
+  			<label class="radio"><input name="group1" type="radio">  Classical</label>
 			</div>
 			<div class="col-sm-3 filterRadios">
-				<label class="radio"><input type="radio">  Pop</label>
-  			<label class="radio"><input type="radio">  Country</label>
-  			<label class="radio"><input type="radio">  Dance</label>
-  			<label class="radio"><input type="radio">  Other</label>
+				<label class="radio"><input name="group1" type="radio">  Pop</label>
+  			<label class="radio"><input name="group1" type="radio">  Country</label>
+  			<label class="radio"><input name="group1" type="radio">  Dance</label>
+  			<label class="radio"><input name="group1" type="radio">  Other</label>
 			</div>
 		<!-- End filtersDiv -->
 		</div>
@@ -82,6 +82,10 @@
   			<label class="col-sm-2 control-label textBoxLabel">Album Title:</label>
  				<div class="col-sm-10 textBoxDiv">
   				<input id="newAlbumBox" type="text" class="form-control textInputBox" placeholder="Enter Album Title" ng-model="album">
+  			</div>
+  			<label class="col-sm-2 control-label textBoxLabel">Artwork Image URL:</label>
+ 				<div class="col-sm-10 textBoxDiv">
+  				<input id="newArtworkBox" type="text" class="form-control textInputBox" placeholder="Enter Artwork Image URL" ng-model="image">
   			</div>
   			<div class="col-sm-3"><p class="selectGenreTitle">Select Genre: </p></div>
   			<div class="form-group radio addMusicRadio col-sm-3">
