--- a/partials/add-song.html
+++ b/partials/add-song.html
@@ -83,6 +83,10 @@
  				<div class="col-sm-10 textBoxDiv">
   				<input id="newAlbumBox" type="text" class="form-control textInputBox" placeholder="Enter Album Title" ng-model="album">
   			</div>
+  			<label class="col-sm-2 control-label textBoxLabel">Album Year:</label>
+ 				<div class="col-sm-10 textBoxDiv">
+  				<input id="newYearBox" type="text" class="form-control textInputBox" placeholder="Enter Album Year" ng-model="year">
+  			</div>
   			<label class="col-sm-2 control-label textBoxLabel">Artwork Image URL:</label>
  				<div class="col-sm-10 textBoxDiv">
   				<input id="newArtworkBox" type="text" class="form-control textInputBox" placeholder="Enter Artwork Image URL" ng-model="image">
